--- a/charts/graphite/values.yaml
+++ b/charts/graphite/values.yaml
@@ -159,7 +159,7 @@ configMaps:
 
     # Enable daily log rotation. If disabled, a new file will be opened whenever the log file path no
     # longer exists (i.e. it is removed or renamed)
-    ENABLE_LOGROTATION = True
+    ENABLE_LOGROTATION = False
 
     # Specify the user to drop privileges to
     # If this is blank carbon-cache runs as the user that invokes it
