--- a/charts/graphite/values.yaml
+++ b/charts/graphite/values.yaml
@@ -53,8 +53,11 @@ resources: {}
   #  memory: 512Mi
 
 nodeSelector: {}
-
-tolerations: []
+tolerations:
+- key: "graphiteHost"
+  operator: "Equal"
+  value: "true"
+  effect: "NoSchedule"
 
 affinity: {}
 
