--- a/charts/graphite/values.yaml
+++ b/charts/graphite/values.yaml
@@ -42,7 +42,7 @@ persistence:
   ## If defined, PVC must be created manually before volume will be bound
   # existingClaim:
   accessMode: ReadWriteOnce
-  size: 10Gi
+  size: 500Gi
 
 resources: {}
   # limits:
@@ -52,9 +52,17 @@ resources: {}
   #  cpu: 200m
   #  memory: 512Mi
 
-nodeSelector: {}
+#nodeSelector: {}
+nodeSelector:
+    serviceType: graphite
 
-tolerations: []
+
+#tolerations: []
+tolerations:
+- key: dedicatedHost
+  operator: Equal
+  value: graphite
+  effect: NoSchedule
 
 affinity: {}
 
