Added annotation type being InternalLoadBalancer

--- a/charts/graphite/values.yaml
+++ b/charts/graphite/values.yaml
@@ -8,7 +8,9 @@ image:
 service:
   type: LoadBalancer
   port: 8080
-  annotations: {}
+  #annotations: {}
+  annotations:
+    cloud.google.com/load-balancer-type: "Internal"
   labels: {}
 
 ingress:
