--- a/charts/graphite/templates/service.yaml
+++ b/charts/graphite/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "graphite.fullname" . }}
+  name: graphite-backend 
   labels:
     app.kubernetes.io/name: {{ include "graphite.name" . }}
     helm.sh/chart: {{ include "graphite.chart" . }}
@@ -10,12 +10,8 @@ metadata:
 {{- if .Values.service.labels }}
 {{ toYaml .Values.service.labels | indent 4 }}
 {{- end }}
-{{- with .Values.service.annotations }}
-  annotations:
-{{ toYaml . | indent 4 }}
-{{- end }}
 spec:
-  type: {{ .Values.service.type }}
+  type: NodePort
   ports:
     - name: graphite-pickle
       port: 2004
@@ -32,9 +28,6 @@ spec:
     - name: aggregate-pickl
       port: 2024
       protocol: TCP
-    - name: statsd
-      port: 8125
-      protocol: {{ .Values.statsd.interface }}
     - name: statsd-admin
       port: 8126
       protocol: TCP
