--- a/charts/graphite/templates/graphite-lb.yaml
+++ b/charts/graphite/templates/graphite-lb.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
  labels:
-  app.kubernetes.io/instance: graphite
-  app.kubernetes.io/name: graphite
+  app.kubernetes.io/instance: {{ .Release.Name }}
+  app.kubernetes.io/name: {{ include "graphite.name" . }}
  name: graphite-lb
 spec:
  type: LoadBalancer
@@ -11,5 +11,5 @@ spec:
  - port: 8080
    targetPort: 8080
  selector:
-  app.kubernetes.io/instance: graphite
-  app.kubernetes.io/name: graphite
+  app.kubernetes.io/instance: {{ .Release.Name }}
+  app.kubernetes.io/name: {{ include "graphite.name" . }}
