Setting placementgrp value

--- a/charts/graphite/values.yaml
+++ b/charts/graphite/values.yaml
@@ -26,6 +26,7 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
+placementGroup: "true"
 persistence:
   ## Enable storage persistence using Persistent Volume Claims.
   ##
