--- a/charts/graphite/templates/statefulset.yaml
+++ b/charts/graphite/templates/statefulset.yaml
@@ -14,6 +14,7 @@ spec:
     matchLabels:
       app.kubernetes.io/name: {{ include "graphite.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
+      replicas: {{ .Values.replicaCount }}
   serviceName: {{ template "graphite.name" . }}
   template:
     metadata:
