--- a/charts/graphite/templates/statsd-service.yaml
+++ b/charts/graphite/templates/statsd-service.yaml
@@ -1,25 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "graphite.fullname" . }}
+  name: statsd
   labels:
-    app.kubernetes.io/name: {{ include "graphite.name" . }}
-    helm.sh/chart: {{ include "graphite.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-{{- if .Values.service.labels }}
-{{ toYaml .Values.service.labels | indent 4 }}
-{{- end }}
-{{- with .Values.service.annotations }}
-  annotations:
-{{ toYaml . | indent 4 }}
-{{- end }}
+    app: statsd
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - name: statsd
-      port: 8125
-      protocol: {{ .Values.statsd.interface }}
+  type: NodePort
   selector:
-    app.kubernetes.io/name: {{ include "graphite.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app: graphite
+  clusterIP: None
+  ports:
+  - port: 8125
+    name: statsd
+    protocol: UDP
+  - port: 8126
+    name: statsd-admin
+    protocol: TCP
