--- a/charts/graphite/values.yaml
+++ b/charts/graphite/values.yaml
@@ -27,6 +27,8 @@ ingress:
   #      - chart-example.local
 
 placementGroup: "true"
+podReplicaCount: 2
+statsdReplicaCount: 2
 persistence:
   ## Enable storage persistence using Persistent Volume Claims.
   ##
