--- a/charts/graphite/templates/statsd-deployment.yaml
+++ b/charts/graphite/templates/statsd-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: statsd
 spec:
-  replicas: {{ Values.statsdReplicaCount }}
+  replicas: {{ .Values.statsdReplicaCount }}
   template:
     metadata:
       labels:
