Update the component to statsd

--- a/charts/graphite/templates/statsd-deployment.yaml
+++ b/charts/graphite/templates/statsd-deployment.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     metadata:
       labels:
-        component: graphite
+        component: statsd
         app: statsd
     spec:
       containers:
