--- a/charts/graphite/templates/internal-lb-service.yaml
+++ b/charts/graphite/templates/internal-lb-service.yaml
@@ -21,4 +21,4 @@ spec:
       port: 8125
       protocol: {{ .Values.statsd.interface }}
   selector:
-    app.kubernetes.io/name: statsd
+    app: statsd
